# http-request-cpp

./: CMakeLists.txt  clean-build.sh  conanfile.txt
src/: data_fetcher.cpp  data_fetcher.h  json.cpp  json.h  main.cpp  products.cpp  products.h
